Add chunk retrieval information

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,6 +52,21 @@
         </div>
 
     </section>
+
+    <section id="retrieval">
+        <h3> Relevant study </h3>
+        <div class="container section-content">
+            <div class="row">
+                <div class="col-sm">
+                    <label class="field-title" for="kgenhanced-llm-retrieval"> Relevant text </label>
+                    <textarea id="kgenhanced-llm-retrieval" class="big-textarea" readonly></textarea>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
 </main>
 
 <footer>
