Add saving embeddings to disk

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <section id="retrieval">
-        <h3> Relevant study </h3>
+        <h3> Relevant studies </h3>
         <div class="container section-content">
             <div class="row">
                 <div class="col-sm">
