--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -127,3 +127,8 @@ button {
 button:active {
     box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.7);
 }
+
+textarea {
+    width: 100%;
+    height: 10em;
+}
