--- a/app/static/SemanticRAG/css/default.css
+++ b/app/static/SemanticRAG/css/default.css
@@ -1,10 +1,11 @@
 body {
-    padding: 0;
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-flow: column;
 }
 
 header {
-    background-color: #ffffff;
     padding: 5px;
 }
 
@@ -14,31 +15,195 @@ header {
     align-items: center;
 }
 
+
+main {
+    width: 50%;
+    align-self: center;
+    gap: 1rem;
+    margin-top: 2.5rem;
+    margin-bottom: 5rem;
+    flex-grow: 1;
+}
+
+.double-message-container {
+    display: flex;
+    gap: 1rem;
+}
+
+.double-message-container > * {
+    flex: 1;
+    background-color: #eee;
+    padding: 0.5rem;
+    border-radius: 10px;
+}
+
+.message-container {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+#user-message {
+    display: none;
+}
+
+#chatbot-message-placeholder {
+    display: none;
+}
+
+#chatbot-message {
+    display: none;
+}
+
+.message {
+    padding-top: 12px;
+    border: 0px solid;
+    resize: none;
+    cursor: inherit;
+}
+
+#retreived-text-container {
+    display: none;
+    margin-top: 2rem;
+}
+
+.chat-icon-container {
+    border-radius: 100%;
+    border: 1px solid lightblue;
+    display: inline-flex;
+    align-self: flex-start;
+}
+
+#sticky-footer {
+    width: 50%;
+    position: fixed;
+    bottom: 45%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    border: 1px solid lightblue;
+    background-color: white;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.sticky-footer-container {
+    width: 100%;
+    padding: 1rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    column-gap: 1rem;
+    justify-content: center;
+    display: flex;
+    background-color: #eee;
+}
+
+#input-text-container {
+    width: 100%;
+    align-content: center;
+}
+
+
 textarea {
     width: 100%;
-    height: 10em;
+    background-color: transparent;
 }
 
-footer {
-    background-color: #0055c2;
+textarea:focus {
+    outline: none;
 }
 
-h1 {
-    margin: 0;
+
+#input-text {
+    resize: none;
+    border: 0px solid; 
 }
 
-h2 {
+#input-text:focus {
+    outline: none; /* Ensures no outline on focus */
+}
+
+.send-button {
+    background-color: #4CAF50; /* Green */
     color: white;
+    padding: 10px 15px 10px 14px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    align-self: center;
+}
+
+.send-button:hover {
+    background-color: #45a049;
+}
+
+
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 1em;
+}
+
+.copyright-container {
+    padding: 0.1rem;
+}
+
+.copyright {
+    color: white;
+    font-size: small;
+}
+
+.field-title {
     font-weight: bold;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-h3 {
+#runButton {
+    background-color: #bedbff;
     color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: large;
+    font-weight: bold;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 1em;
+    border-color: #a9a9a9;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
+    transition: transform 0.1s ease-in-out;
 }
 
-h4 {
-    color: white;
+#runButton:hover {
+    /* font-size: x-large; */
+    transform: scale(1.05)
+}
+
+#runButton:active {
+    box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.7);
+}
+
+button {
+    all: unset;
+    transition: transform 0.2s ease-in-out;
+}
+
+button:hover {
+    transform: scale(1.02);
+}
+
+#send-button:hover {
+    transform: scale(1);
+}
+
+button:active {
+    box-shadow: none 0 4px 10px rgba(0, 0, 0, 0.7);
 }
 
 section {
@@ -58,77 +223,23 @@ section {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
-.footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 1em;
-}
+pre {
+    white-space: pre-wrap; /* Allows wrapping of long lines */
+    word-wrap: break-word; /* Break words if necessary */
+  }
 
-.copyright {
-    color: white;
-}
+  h1 {
+    margin-top: 2rem;
+  }
 
-.field-title {
-    font-weight: bold;
-}
+  header {
+    margin-top: 2rem;
+  }
 
-.note {
-    color: #e0e0e0;
-    font-style: italic;
-}
-
-#runButton {
-    background-color: #bedbff;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: large;
-    font-weight: bold;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 1em;
-    border-color: #a9a9a9;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
-}
-
-#runButton:hover {
-    font-size: x-large;
-}
-
-#runButton:active {
-    box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.7);
-}
-
-.errorMessage {
-    color: red;
-    font-size: medium;
-}
-
-button {
-    background-color: #85a0de;
-    color: white;
-    padding: 5px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: medium;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 1em;
-    border-color: #85a0de;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-}
-
-button:active {
-    box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.7);
-}
-
-textarea {
+  footer {
+    bottom: 0;
+    margin-bottom: 0;
+    align-self: flex-end;
     width: 100%;
-    height: 10em;
-}
+    overflow: hidden;
+  }
