--- a/app/templates/SemanticRAG.html
+++ b/app/templates/SemanticRAG.html
@@ -39,7 +39,7 @@
 
         <div id="retreived-text-container">
             <h2>Relevant text</h2>
-            <pre id="retreived-text" class="message"></pre>
+            <div id="retreived-text" class="message"></div>
         </div>
     </main>
 
