--- a/app/templates/SemanticRAG.html
+++ b/app/templates/SemanticRAG.html
@@ -50,6 +50,14 @@
             <div id="input-text-container">
                 <textarea rows="1" id="input-text" placeholder="Enter your question"></textarea>
             </div> 
+            <div class="param">
+                <span>Top&#8209;k</span>
+                <input id="topk" type="number" min="1" max="100" class="param-item" placeholder="5" type="text"/>
+            </div>
+            <div class="param">
+                <span>Score threshold</span>
+                <input id="score" step="0.1" type="number" min="0.1" max="1" class="param-item" placeholder="0.6" type="text"/>
+            </div>
             <button class="send-button" onclick="onMessageSend()" id="send-button">
                 <i class="fas fa-paper-plane"></i>
             </button>
