--- a/app/templates/components/pdf.html
+++ b/app/templates/components/pdf.html
@@ -1,5 +1,5 @@
 
-<iframe id="pdfViewer" src="http://127.0.0.1:5000/SemanticRAG/pdf.js/web/viewer.html?file={{src}}" width="100%" height="100%"></iframe>
+<iframe id="pdfViewer" src="{{ url_for('static', filename='SemanticRAG/pdf.js/web/viewer.html') }}?file={{src}}" width="100%" height="100%"></iframe>
 
 <script>
 function displayPDF(id, keyword){
