--- a/app/static/SemanticRAG/css/search.css
+++ b/app/static/SemanticRAG/css/search.css
@@ -1,9 +1,44 @@
-#search-container {
+main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 80%;
+    margin-bottom: 1rem;
+}
+
+#main {
+    display: flex;
     margin-top: 2rem;
-    margin-bottom: 2rem;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-    column-gap: 1rem;
+    flex-direction: row;
+    width: 100%;
+}
+
+#main > div {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 2rem;
+}
+
+.section-title {
+    font-size: large;
+    margin-bottom: 10px;
+}
+
+#search-div {
+    flex:3
+}
+
+#documents-div {
+    display: flex;
+    flex:1
+}
+
+#search-container {
+    width:100%
 }
 
 #searchbar-container {
@@ -45,8 +80,23 @@
     outline: none; 
 } 
 
+#documents-container {
+    flex:1;
+    max-height: 80vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;    /* Add vertical scroll */
+    overflow-x: hidden;  /* Prevent horizontal scroll */
+}
 
 .search-icon {
     color: rgb(150,150,150);
     margin-left: 5px;
+}
+
+footer {
+    position: sticky;
+    bottom: 0;
 }
