--- a/app/templates/components/pdf.html
+++ b/app/templates/components/pdf.html
@@ -1,16 +1,22 @@
-
-<iframe id="pdfViewer" src="{{ url_for('static', filename='SemanticRAG/pdf.js/web/viewer.html') }}?file={{src}}" width="100%" height="100%"></iframe>
+<iframe id="pdfViewer" src="{{ url_for('static', filename='SemanticRAG/pdf.js/web/viewer.html') }}?file={{src}}"
+  width="100%" height="100%"></iframe>
 
 <script>
-function displayPDF(id, keyword){
+  function displayPDF(id, keyword) {
+
+    if (!keyword.trim()) {
+      // If the keyword is an empty string or just whitespace, return early
+      console.log("No keyword provided. Skipping search dispatch.");
+      return;
+    }
     const iframe = document.getElementById(id);
 
     iframe.onload = () => {
       const childWindow = iframe.contentWindow;
       console.log(childWindow)
-    
+
       if (childWindow && childWindow.PDFViewerApplication) {
-        childWindow.PDFViewerApplication.initializedPromise.then(() => {          
+        childWindow.PDFViewerApplication.initializedPromise.then(() => {
           childWindow.PDFViewerApplication.eventBus.dispatch("find", {
             source: window,
             type: "find",
@@ -22,6 +28,6 @@ function displayPDF(id, keyword){
         });
       }
     };
-}
-displayPDF("pdfViewer", "{{keyword}}")
+  }
+  displayPDF("pdfViewer", "{{keyword}}")
 </script>
