--- a/app/static/SemanticRAG/css/search.css
+++ b/app/static/SemanticRAG/css/search.css
@@ -2,7 +2,7 @@ main {
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     margin-bottom: 1rem;
 }
 
@@ -15,7 +15,13 @@ main {
     width: 100%;
 }
 
-#main > div {
+.section-title {
+    font-size: large;
+    margin-bottom: 10px;
+}
+
+#search-div {
+    flex:2.5;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -23,26 +29,36 @@ main {
     padding: 2rem;
 }
 
-.section-title {
-    font-size: large;
-    margin-bottom: 10px;
+#results {
+    margin-top: 15px;
 }
 
-#search-div {
-    flex:3
-}
+.divider {
+    width: 3px;
+    background-color: #ccc;
+    cursor: ew-resize;
+    user-select: none;
+  }
 
 #documents-div {
-    display: flex;
-    flex:1
+    flex:1;
+    min-width: 0;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 2rem;
 }
 
 #search-container {
-    width:100%
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #searchbar-container {
-    width: 100%;
+    width: 80%;
     padding: 0.75rem;
     column-gap: 1rem;
     display: flex;
@@ -82,13 +98,17 @@ main {
 
 #documents-container {
     flex:1;
-    max-height: 80vh;
+    min-height: 70vh;
+    max-height: 70vh;
+    height: 70vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     overflow-y: auto;    /* Add vertical scroll */
     overflow-x: hidden;  /* Prevent horizontal scroll */
+    display: inline-block;
+    overflow-wrap: break-word;
 }
 
 .search-icon {
