--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -27,6 +27,7 @@
                 {% for collection in collections %}
                 <option value="{{ collection }}">{{collection}}</option>
                 {% endfor %}
+                <option value="new">New...</option>
             </select>
         </div>
         <div id="main">
@@ -53,20 +54,36 @@
                 </div>
                 <div id="results"></div>
             </div>
-            {# <div>
-                <span>Collections</span>
-                <form action="{{ url_for('main.upload_files') }}" method="post" enctype="multipart/form-data">
-                    <input type="text" id="collection_name" placeholder="name" />
-                    <input type="file" name="files[]" multiple>
-                    <button type="submit">Upload</button>
-                </form>
-            </div> #}
+            <div class="divider"></div>
             <div id="documents-div">
                 <span class="section-title">Documents</span>
                 <div id="documents-container"></div>
             </div>
         </div>
     </main>
+    <div class="modal" id="newCollectionModal" tabindex="-1" aria-labelledby="newCollectionLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="newCollectionLabel">New collection</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="newCollectionForm" action="{{ url_for('main.upload_collection') }}" method="post" enctype="multipart/form-data">
+                            <label for="name">Collection name</label>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+
+                            <label for="documents">Documents</label>
+                            <input class="form-control" id="documents" type="file" name="files[]" multiple>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" id="submitButton" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <div class=" bg-primary  row d-flex justify-content-between align-items-center text-center copyright-container">
             <span class="copyright"> Copyright © 2024 ICS-FORTH </span>
@@ -74,7 +91,11 @@
     </footer>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='SemanticRAG/js/search.js') }}"></script>
+
 </body>
 
 </html>
